--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </ul>
                  </nav>
                <div class="hero-content">
-                   <h1>Curos Web Fundamentos</h1>
+                   <h1>Curso Web Fundamentos</h1>
                   <p>Aprenda HTML, CSS e Javascript</p>
                </div>
           </header>
