--- a/index.html
+++ b/index.html
@@ -29,15 +29,20 @@
 
             <main>
                 <section class="content-section">
-                      <div class="card">
+                    <div class="card">
                          <img src="imagens/card_01.png" alt="">
                          <p>Seletores</p>
-                         <div class="card">
+                    </div>
+
+                    <div class="card">
                           <img src="imagens/card_02.jpg" alt="">
                           <p>Posicionamento</p>
-                          <div class="card">
+                    </div>
+
+                    <div class="card">
                             <img src="imagens/card_03.jpg" alt="">
                             <p>Fontes</p>
+                    </div>        
                 </section>
 
                 <section class="content-section">
