--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                 <section class="content-section">
                      <article>
-                        <header class="content-header"> <h2>Título do article</h2> </header>
+                        <header class="content-header"> <h2>Título do artigo</h2> </header>
                         <p>Paragráfo 1</p>
                         <p>Parágrafo 2</p>
                      </article>
